fix: config styling on small screens

--- a/components/Workspace.module.scss
+++ b/components/Workspace.module.scss
@@ -10,12 +10,8 @@
   top: 52vh;
   left: 240px;
   padding: 0.5em 1em;
-  background: $green;
-  color: $lightest;
   z-index: 5;
   font-size: 1.25rem;
-  font-weight: 600;
-  cursor: pointer;
   &:not(.newChanges) {
     pointer-events: none;
     box-shadow: none;
